<resources>
	<string name="app_name">Houseclub</string>
	<string name="login">Login</string>
	<string name="phone_number">Phone number</string>
	<string name="enter_your_phone">Enter your phone #</string>
	<string name="sms_code">Code from SMS</string>
	<string name="resend_code_message">Did not receive it?</string>
	<string name="resend_code_button">Tap to resend</string>
	<string name="next">Next</string>
	<string name="warning">Warning!</string>
	<string name="warning_text">This is an <b>unofficial</b> app. Using this might get your Clubhouse account permanently banned. Proceed at your own risk.</string>
	<string name="i_understand">I understand</string>
	<string name="loading">Loading...</string>
	<string name="error_loading">Error loading data</string>
	<string name="waitlist">Wait list</string>
	<string name="waitlist_text">You\'re waiting for someone to invite you to Clubhouse. Your account is currently inactive.</string>
	<string name="log_out">Log out</string>

	<string name="ongoing_call">Ongoing call</string>
	<string name="leave_room">✌️ Leave quietly</string>
	<string name="leave_room_short">✌️</string>
	<string name="join_this_room">Join this room?</string>
	<string name="join">Join</string>
	<string name="cancel">Cancel</string>
	<string name="followed_by_speakers">Followed by the speakers</string>
	<string name="others_in_room">Others in the room</string>
	<string name="confirm_join_as_speaker">%s invites you to join as a speaker, accept?</string>
	<string name="register">Register</string>
	<string name="first_name">First name</string>
	<string name="last_name">Last name</string>
	<string name="username">Username</string>
	<string name="complete_registration">Complete registration</string>
	<string name="all_fields_are_required">All fields are required</string>
	<string name="username_limit">Username can\'t be longer than 16 characters</string>
	<string name="register_warning">Registration in this <b>unofficial</b> app is as experimental a feature as the app itself. There\'s always a non-zero possibility of a ban if you don\'t use the official app to register. It would work better if you borrow an iOS device from someone, but you could still try registering from Android.\n\nPlease be aware that you\'ll only be able to change your name <b>once</b> after you register. Please use your real name.</string>
	<string name="welcome_to_clubhouse">Welcome to Clubhouse!</string>
	<plurals name="followers">
		<item quantity="one">%d follower</item>
		<item quantity="other">%d followers</item>
	</plurals>
	<plurals name="following">
		<item quantity="one">%d following</item>
		<item quantity="other">%d following</item>
	</plurals>
	<plurals name="invites">
		<item quantity="one">You have %d invite</item>
		<item quantity="other">You have %d invites</item>
	</plurals>
	<string name="invite_button_label">Invite</string>
	<string name="invite_phone_hint">Phone number to invite</string>
	<string name="follows_you">Follows you</string>
	<string name="follow">Follow</string>
	<string name="following">Following</string>
	<string name="invite_to_room">Invite People to Room</string>
	<string name="followers_title">Followers</string>
	<string name="following_title">Following</string>
	<string name="event_title">Upcoming Events</string>
	<string name="search_people_hint">Search People</string>
	<string name="search_clubs_hint">Search Clubs</string>
	<string name="notifications_title">Notifications</string>
	<string name="confirm_unfollow">Unfollow <b>%s</b>?</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="joined_date">Joined %s</string>
	<string name="invited_by">Nominated by %s</string>
	<string name="update_bio">Update bio</string>
	<string name="update_name">Update name</string>
	<string name="save">Save</string>
	<string name="event_not_started">This event hasn\'t started yet</string>
	<string name="add_instagram">Link instagram</string>
	<string name="confirm_unlink_instagram_title">Unlink instagram?</string>
	<string name="confirm_unlink_instagram">Are you sure want to unlink instagram? It can be linked in future</string>
	<string name="instagram_linked">Instagram linked, reopen page to see</string>
	<string name="event_expired">This event has already ended</string>
	<string name="log_in_to_activate">Please log in again to activate your account.</string>
	<string name="ok">OK</string>
    <string name="create_room">Start a room</string>
    <string name="topic_name">Add a topic</string>
    <string name="room_open_mode">Open</string>
	<string name="room_social_mode">Social</string>
	<string name="room_private_mode">Private</string>
    <string name="invite_name">User name to invite</string>
	<string name="invite_message">Hey %s - I have an invite to Clubhouse and want you to join. 🙂 I added you using %s, so make sure to use that number when you register. Here is the link! https://join.club/app</string>
    <string name="party_popper">🎉</string>
</resources>
